--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,18 @@ body {
   margin: 1em 0;
 }
 
+img {
+  max-width: 100%;
+}
+
+button {
+  background: none;
+  padding: 0;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
@@ -194,6 +206,61 @@ a {
 
 /*-----------------SECTION-HOVER-ANIM--------------------*/
 /*------------------------SECTION-COMMON----------------*/
+.accept {
+  width: 260px;
+  margin-bottom: 55px;
+}
+
+.accept__check {
+  display: none;
+}
+
+.accept__check:checked + .accept__label .accept__fake:after {
+  display: block;
+}
+
+.accept__left {
+  margin-right: 9px;
+}
+
+.accept__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #999999;
+  line-height: 20px;
+}
+
+.accept__fake {
+  width: 18px;
+  height: 18px;
+  border-radius: 3px;
+  border: 1px solid #4ecdc4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.accept__fake:after {
+  display: none;
+  content: '';
+  width: 10px;
+  height: 7px;
+  margin-bottom: 4px;
+  border-bottom: 1px solid #4ecdc4;
+  border-left: 1px solid #4ecdc4;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
 /*------------------------SECTION-HEADER----------------*/
 .header {
   display: -webkit-box;
@@ -255,6 +322,76 @@ a {
   margin-bottom: 0;
 }
 
+.hmenu {
+  position: fixed;
+  z-index: 100;
+  left: -999px;
+  top: 0;
+  bottom: 0;
+  width: 480px;
+  background-color: #052826;
+  padding: 97px 55px 55px 100px;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+}
+
+.hmenu.active {
+  left: 0;
+}
+
+.hmenu__close {
+  margin-bottom: 38px;
+}
+
+.hmenu__hr {
+  border: none;
+  margin: 0;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.1);
+  margin-bottom: 50px;
+}
+
+.hmenu__item {
+  display: block;
+  position: relative;
+  color: #ffffff;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+  padding-right: 50px;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.hmenu__item.active, .hmenu__item:hover {
+  color: #4ecdc4;
+}
+
+.hmenu__item.active:after, .hmenu__item:hover:after {
+  opacity: 1;
+}
+
+.hmenu__item:after {
+  content: url(/images/icons/hmenu-arrow.png);
+  display: block;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.hmenu__item:last-child {
+  margin-bottom: 0;
+}
+
 /*-----------------SECTION-CONTROLS--------------------*/
 .controls {
   position: absolute;
@@ -274,9 +411,145 @@ a {
   margin-right: 0;
 }
 
+/*-----------------SECTION-CALLORDER--------------------*/
+.callorder {
+  position: fixed;
+  z-index: 100;
+  right: -999px;
+  top: 0;
+  bottom: 0;
+  width: 480px;
+  background-color: #052826;
+  padding: 100px 75px;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+}
+
+.callorder.active {
+  right: 0;
+}
+
+.callorder__controls {
+  position: relative;
+  margin-bottom: 25px;
+}
+
+.callorder__controls .controls {
+  position: static;
+}
+
+.callorder__hr {
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: none;
+  margin: 0;
+  margin-bottom: 22px;
+}
+
+.callorder__contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  margin-bottom: 55px;
+}
+
+.callorder__contacts-text {
+  color: #999999;
+  font-weight: 700;
+}
+
+.callorder__phone {
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.callorder__questions {
+  margin-bottom: 30px;
+}
+
+.callorder__questions-title {
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+
+.callorder__questions-text {
+  color: #cccccc;
+  line-height: 24px;
+  margin-bottom: 25px;
+}
+
+.callorder__questions-text:last-child {
+  margin-bottom: 0;
+}
+
+.callorder__fields {
+  margin-bottom: 25px;
+}
+
+.callorder__input {
+  border: none;
+  background: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+  padding: 8px 15px;
+  width: 100%;
+  margin-bottom: 30px;
+  color: #4ecdc4;
+}
+
+.callorder__input::-webkit-input-placeholder {
+  color: #4ecdc4;
+}
+
+.callorder__input:-ms-input-placeholder {
+  color: #4ecdc4;
+}
+
+.callorder__input::-ms-input-placeholder {
+  color: #4ecdc4;
+}
+
+.callorder__input::placeholder {
+  color: #4ecdc4;
+}
+
+.callorder__input:last-child {
+  margin-bottom: 0;
+}
+
+.callorder__submit {
+  text-align: right;
+}
+
+.callorder__submit-button {
+  color: #4ecdc4;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.callorder__submit-button:after {
+  content: url(/images/icons/hmenu-arrow.png);
+  display: inline-block;
+  margin-left: 10px;
+}
+
 /*-----------------SECTION-MAIN--------------------*/
 .main {
-  width: 100vw;
+  max-width: 100vw;
+  max-height: 100vh;
   height: 100vh;
   min-height: auto;
   overflow: hidden;
