--- a/css/sections/_menu.scss
+++ b/css/sections/_menu.scss
@@ -13,3 +13,66 @@
     }
   }
 }
+
+.hmenu {
+  position: fixed;
+  z-index: 100;
+  left: -999px;
+  top: 0;
+  bottom: 0;
+  width: 480px;
+  background-color: $Dark-green;
+  padding: 97px 55px 55px 100px;
+  transition: .5s;
+
+  &.active {
+    left: 0;
+  }
+
+  &__close {
+    margin-bottom: 38px;
+  }
+
+  &__hr {
+    border: none;
+    margin: 0;
+    height: 1px;
+    background-color: rgba($bg, .1);
+    margin-bottom: 50px;
+  }
+
+  &__item {
+    display: block;
+    position: relative;
+    color: $bg;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+    padding-right: 50px;
+    transition: .3s;
+
+    &.active, &:hover  {
+      color: $Medium-turquoise;
+      &:after {
+        opacity: 1;
+      }
+    }
+
+    &:after {
+      content: url(/images/icons/hmenu-arrow.png);
+      display: block;
+      opacity: 0;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: .3s;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+
+  }
+}
