--- a/css/sections/_callorder.scss
+++ b/css/sections/_callorder.scss
@@ -83,6 +83,7 @@
     padding: 8px 15px;
     width: 100%;
     margin-bottom: 30px;
+    outline: none;
 
     color: $Medium-turquoise;
 
@@ -102,6 +103,12 @@
       color: $Medium-turquoise;
       font-size: 20px;
       font-weight: 700;
+      transition: .3s;
+
+      &.disabled {
+        pointer-events: none;
+        opacity: .5;
+      }
 
 
       &:after {
