--- a/css/main.scss
+++ b/css/main.scss
@@ -55,6 +55,8 @@ $font-size: 16px;
 @import "sections/_main";
 /*-----------------SECTION-CATALOG--------------------*/
 @import "sections/_catalog";
+/*-----------------SECTION-CONSTRUCTOR--------------------*/
+@import "sections/_constructor";
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
