--- a/css/layout/_adjustment.scss
+++ b/css/layout/_adjustment.scss
@@ -69,6 +69,15 @@ h1,h2,h3,h4,h5,h6,p {
   margin: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+
+  li {
+    list-style: none;
+  }
+}
+
 a {
   text-decoration: none;
   color: inherit;
