--- a/css/sections/_main.scss
+++ b/css/sections/_main.scss
@@ -161,3 +161,17 @@
   }
 }
 
+.mouse {
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 1px);
+  transform: translateX(-50%);
+
+  display: flex;
+  align-items: center;
+
+  &__img {
+    margin: 0 50px;
+  }
+}
+
