Добавил страницу контактов (пока без карты)

--- a/css/main.scss
+++ b/css/main.scss
@@ -57,6 +57,8 @@ $font-size: 16px;
 @import "sections/_catalog";
 /*-----------------SECTION-CONSTRUCTOR--------------------*/
 @import "sections/_constructor";
+/*-----------------SECTION-CONTACTS--------------------*/
+@import "sections/_contacts";
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
