--- a/css/main.css
+++ b/css/main.css
@@ -1099,6 +1099,100 @@ a {
   font-weight: 700;
 }
 
+/*-----------------SECTION-CONTACTS--------------------*/
+.contacts {
+  width: 100%;
+  height: 100%;
+  min-height: auto;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.contacts__list {
+  -webkit-box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.6);
+  padding-top: 140px;
+  padding-bottom: 20px;
+  -ms-flex-preferred-size: 70%;
+  flex-basis: 70%;
+}
+
+.contacts__list .container {
+  height: 100%;
+}
+
+.contacts__list .row {
+  height: 100%;
+  margin-left: -120px;
+  margin-right: -120px;
+  -ms-flex-line-pack: distribute;
+  align-content: space-around;
+}
+
+.contacts__map {
+  -ms-flex-preferred-size: 30%;
+  flex-basis: 30%;
+}
+
+.contact {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-left: 15px;
+  margin-right: 15px;
+  word-wrap: break-word;
+  width: calc(25% - 30px);
+  margin-left: 120px;
+  margin-right: 120px;
+  width: calc(25% - 240px);
+}
+
+.contact__title {
+  color: #fefefe;
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.contact__hr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.contact__hr-line {
+  width: 120px;
+  height: 3px;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-right: 13px;
+}
+
+.contact__hr-point {
+  width: 3px;
+  height: 3px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.contact__item {
+  display: block;
+  color: #fefefe;
+  font-size: 18px;
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: 20px;
+}
+
+.contact__item:last-child {
+  margin-bottom: 0;
+}
+
 /*------------------------SECTION-FOOTER---------------------*/
 .footer {
   display: -webkit-box;
