--- a/css/layout/_common.scss
+++ b/css/layout/_common.scss
@@ -40,3 +40,97 @@
     }
   }
 }
+
+.container-small {
+  padding: 0 15px;
+  max-width: 1170px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.title {
+  color: $bg;
+  font-size: 36px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.hr {
+  display: flex;
+  margin-bottom: 25px;
+  opacity: .5;
+
+  &__line {
+    width: 120px;
+    height: 3px;
+    background-color: $bg;
+    margin-right: 13px;
+  }
+  &__point {
+    width: 3px;
+    height: 3px;
+    background-color: $bg;
+  }
+}
+
+.subtitle {
+  color: $bg;
+  font-family: "Exo 2";
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 60px;
+}
+
+.text{
+  max-width: 735px;
+  color: $Pastel-gray;
+  font-weight: 600;
+  line-height: 28px;
+}
+
+.vendor {
+  height: 16px;
+
+  &__img {
+    width: 245px;
+    height: 20px;
+    fill: #959595;
+    transition: .3s;
+
+    .vch {
+      transition: .3s;
+    }
+    .vch2 {
+      transition: .3s;
+    }
+
+    &:hover {
+      .vch {
+        fill: #000;
+      }
+      .vch2 {
+        fill: #FFA800;
+      }
+    }
+    //max-height: 100%;
+  }
+}
+
+.logo {
+  margin-bottom: 27px;
+}
+
+.copy {
+  color: $Dark-gray;
+  font-weight: 700;
+  line-height: 24px;
+}
+
+.proportion {
+  display: block;
+  width: 100%;
+  &_266x168 {
+    padding-top: calc((168 / 266) * 100%);
+  }
+}
