--- a/css/main.scss
+++ b/css/main.scss
@@ -45,6 +45,8 @@ $font-size: 16px;
 @import "sections/_header";
 /*-----------------SECTION-SWIPER--------------------*/
 @import "sections/_swiper";
+/*-----------------SECTION-BREADCRUMBS--------------------*/
+@import "sections/_breadcrumbs";
 /*-----------------SECTION-MENU--------------------*/
 @import "sections/_menu";
 /*-----------------SECTION-CONTROLS--------------------*/
@@ -59,6 +61,10 @@ $font-size: 16px;
 @import "sections/_constructor";
 /*-----------------SECTION-CONTACTS--------------------*/
 @import "sections/_contacts";
+/*-----------------SECTION-PRODUCTS--------------------*/
+@import "sections/_products";
+/*-----------------SECTION-MANUFACTURERS--------------------*/
+@import "sections/_manufacturers";
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
