--- a/css/sections/_catalog.scss
+++ b/css/sections/_catalog.scss
@@ -71,6 +71,7 @@
       font-size: 26px;
       font-weight: 700;
       line-height: 34px;
+      text-transform: uppercase;
     }
     &-text {
       color: $Pastel-gray;
