--- a/css/sections/_footer.scss
+++ b/css/sections/_footer.scss
@@ -3,6 +3,54 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+
+  &_2 {
+    background: url(../images/bg/bg-footer.jpg) 0 0 no-repeat;
+    background-size: cover;
+
+    padding: 45px 0;
+  }
+
+  &__top {
+    margin-bottom: 90px;
+  }
+
+  &__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__left {
+    @include col;
+    @include size(9);
+
+    &-wrapper {
+      display: inline-block;
+      text-align: right;
+    }
+  }
+  &__center {
+    @include col;
+    @include size(9);
+  }
+  &__right {
+    @include col;
+    @include size(6);
+  }
+  
+  &__list {
+    
+  }
+  
+  &__item {
+    display: block;
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
 }
 
 .subscription, .privacy {
@@ -10,4 +58,5 @@
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 8.6px;
+  margin-bottom: 25px;
 }
