--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,9 @@ $font-size: 16px;
 @import "sections/_products";
 /*-----------------SECTION-MANUFACTURERS--------------------*/
 @import "sections/_manufacturers";
+/*-----------------SECTION-MANUFACTURER--------------------*/
+@import "sections/_manufacturer";
+
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
