--- a/css/layout/_common.scss
+++ b/css/layout/_common.scss
@@ -82,7 +82,7 @@
   line-height: 60px;
 }
 
-.text{
+.text {
   color: $Pastel-gray;
   font-weight: 600;
   line-height: 28px;
@@ -160,5 +160,64 @@
   width: 100%;
   &_266x168 {
     padding-top: calc((168 / 266) * 100%);
+  }
+}
+
+.pagination {
+
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+
+  &__item {
+    width: 15px;
+    height: 70px;
+    color: $Taupe-gray;
+    font-size: 18px;
+    font-weight: 500;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      height: 2px;
+      width: 100%;
+      background: $Taupe-gray;
+      transform: skewY(25deg);
+      z-index: 10;
+      transition: .3s;
+    }
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -2px;
+      height: 2px;
+      width: 100%;
+      background: $Taupe-gray;
+      transform: skewY(25deg);
+      z-index: 10;
+      transition: .3s;
+    }
+
+    &.active,&:hover {
+      color: $Medium-turquoise;
+      &:after, &:before {
+        background: $Medium-turquoise;
+        z-index: 20;
+      }
+    }
   }
 }
