--- a/css/main.scss
+++ b/css/main.scss
@@ -67,7 +67,8 @@ $font-size: 16px;
 @import "sections/_manufacturers";
 /*-----------------SECTION-MANUFACTURER--------------------*/
 @import "sections/_manufacturer";
-
+/*-----------------SECTION-INGREDIENTS--------------------*/
+@import "sections/_ingredients";
 /*------------------------SECTION-FOOTER---------------------*/
 @import "sections/_footer";
 /*-----------------SECTION-SOCIALS--------------------*/
