--- a/css/sections/_manufacturer.scss
+++ b/css/sections/_manufacturer.scss
@@ -39,7 +39,7 @@
       text-transform: uppercase;
       text-align: center;
 
-      padding: 20px;
+      padding: 20px 10px;
       background-color: $Snow;
       margin-bottom: 15px;
     }
